# job-forager

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RULES.md  commands_original.py  pyproject.toml  session-ses_244b.md
.github/workflows/: ci.yml  daily-job-search.yml  qa-jobspy-all-three-complex.yml  qa-jobspy-glassdoor.yml  qa-jobspy-indeed-complex-uk.yml  qa-jobspy-indeed-simple-uk.yml  (+4 more)
config/: profile.example.toml  sample_records.json
data/: personio_companies.json  smartrecruiters_companies.json  workday_companies.json
dev-docs/: AGENTS.md  ROADMAP.md  architecture.md  safety-policy.md
docs/: API_SOURCES.md  CLI_REFERENCE.md
scripts/: gen_job_board.py  seed_company_lists.py
tests/: test_ats_detector.py  test_cli.py  test_collector_registry.py  test_company_lists.py  test_dedupe.py  test_experience_level.py  test_file_adapter.py  test_health_command.py  test_job_filter.py  test_job_normalizer.py  test_job_record.py  test_location_resolver.py  test_markdown_exporter.py  test_new_filters.py  test_normalized_exporter.py  test_profile_loader.py  test_search_adzuna.py  test_search_arbeitnow.py  test_search_ashby.py  test_search_cli.py  test_search_dedupe.py  test_search_filters.py  test_search_greenhouse.py  test_search_hackernews.py  test_search_hiringcafe.py  test_search_isolation.py  test_search_lever.py  test_search_personio.py  test_search_pinpoint.py  test_search_remoteok.py  test_search_remotive.py  test_search_smartrecruiters.py  test_search_twosigma.py  test_search_validation.py  test_search_weworkremotely.py  test_search_workday.py  test_storage.py
(+50 files in other folders)
